L04-T2 Use modern API of set creation