@@ -4,9 +4,6 @@ import org.testng.Assert;
 import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.Test;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Optional;
 import java.util.Set;
 
@@ -31,7 +28,7 @@ public class PolynomialSolverTest {
         Optional<Set<Integer>> roots = polynomialSolver.findRoots(1, -4, 4);
 
         Assert.assertTrue(roots.isPresent());
-        Assert.assertEquals(roots.get(), new HashSet<>(Collections.singletonList(2)));
+        Assert.assertEquals(roots.get(), Set.of(2));
     }
 
     @Test
@@ -39,6 +36,6 @@ public class PolynomialSolverTest {
         Optional<Set<Integer>> roots = polynomialSolver.findRoots(1, -7, 6);
 
         Assert.assertTrue(roots.isPresent());
-        Assert.assertEquals(roots.get(), new HashSet<>(Arrays.asList(6, 1)));
+        Assert.assertEquals(roots.get(), Set.of(6, 1));
     }
 }
